# pspsdk-samples

./: .gitignore  CMakeLists.txt  Dockerfile  EBOOT.PBP  Makefile  PARAM.SFO  PPSSPP_emulator_shortcut.lnk  PSPGAME.prx  README.md  build.sh  c_cpp_properties.json  dependencies.sh  main.c  psp-game.code-workspace  run_docker.sh  run_ppsspp_flat.sh  setupdocker.sh
app/: CMakeLists.txt  build.sh  main.c
app/include/: audio.c  audio.h  common.h  player.c  tinyobj_loader_c.h
app2d/include/: audio.h  player.h
app3d/: Makefile  README.md
app3d/asset/: grass.raw  knight.raw
app3d/include/: pgconfig.h  pgconst.h  pggame.h  pggraphics.h  pgmath.h  pgtypes.h  pgutils.h
app3d/src/: main.c
app3d/src/game/: game.c
app3d/src/graphics/: model.c  render.c  terrain.c  texture.c
app3d/src/math/: radian.c  simplex.c  vector.c
app3d/src/utils/: callback.c  debug.c  error.c  input.c  tools.c
assets/: face.raw
hello-psp/: EBOOT.PBP  PARAM.SFO  main.c
old/: old.c  old.txt
old-tests/: old.c
old-tests/hello-psp/: Makefile
old-tests/noise/: CMakeLists.txt  PARAM.SFO  main.c  perlin.c  psp_ir_stubs.c
pspreposamples/gu_intergerdrawing/: Makefile  PARAM.SFO  integerdrawing.c
pspreposamples/gu_lines/: EBOOT.PBP  lines.c
pspreposamples/gu_logic/: EBOOT.PBP  logic.c
pspreposamples/kernel_cwd/: Makefile  PARAM.SFO  main.c
pspreposamples/kernel_systimer/: EBOOT.PBP  Makefile  main.c
pspreposamples/net_wlascan/: Makefile  main.c
pspreposamples/savedata_utillity/: Makefile  PARAM.SFO
pspreposamples/sprite/: EBOOT.PBP  PARAM.SFO
pspreposamples/sprite2d/: CMakeLists.txt
pspreposamples/utility_osk_INPUTKEYBOARD/: EBOOT.PBP  osk.prx
samplesTest/3dcubecontrol/: 3dplan.c  EBOOT.PBP  Makefile
samplesTest/blitsample/: Makefile  blit.c
samplesTest/cube/: EBOOT.PBP  PARAM.SFO
samplesTest/font/: EBOOT.PBP  Makefile  main.c
samplesTest/gnuANDprintdebuggerTest/: PARAM.SFO  PRINT  main.c
samplesTest/pspPrinttest/: Makefile  PARAM.SFO
shapesPreview/: main.lua
sources/internal/: pspgraphics.c  pspgraphics.h  pspvram.c  pspvram.h
src/: color.h  common.c  common.h  complexgraphics.c  complexgraphics.h  font.h  graphic.c  graphic.h  main.c  menu.c  menu.h  util.c  util.h
tests/backgroundRender/: Makefile  logo.raw  main.c
tests/myshadowprojection/: EBOOT.PBP  Makefile  PARAM.SFO  shadowprojection.c
tests/old/: Makefile
tests/pspreposamples/gu_intergerdrawing/: EBOOT.PBP
tests/pspreposamples/gu_lines/: Makefile  PARAM.SFO
tests/pspreposamples/gu_logic/: Makefile  PARAM.SFO
tests/pspreposamples/ir_irda/: EBOOT.PBP  Makefile  PARAM.SFO  main.c
tests/pspreposamples/kernel_cwd/: EBOOT.PBP
tests/pspreposamples/kernel_msgbox/: EBOOT.PBP  Makefile  PARAM.SFO  main.c
tests/pspreposamples/kernel_systimer/: PARAM.SFO
tests/pspreposamples/net_wlascan/: wlanscan.prx
tests/pspreposamples/savedata_utillity/: EBOOT.PBP  data.h  main.c
tests/pspreposamples/sprite/: Makefile  sprite.c
tests/pspreposamples/sprite2d/: CMakeCache.txt
tests/pspreposamples/utility_osk_INPUTKEYBOARD/: Makefile  PARAM.SFO
tests/samples/gu/beginobject/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/blend/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/blit/: EBOOT.PBP
tests/samples/gu/celshading/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/clut/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/copy/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/envmap/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/integerdrawing/: EBOOT.PBP
tests/samples/gu/lights/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/morph/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/morphskin/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/ortho/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/reflection/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/rendertarget/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/shadowprojection/: EBOOT.PBP  PARAM.SFO  shadowprojection.c
tests/samples/gu/signals/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/skinning/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/speed/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/spharm/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/splinesurface/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/timing/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/vertex/: EBOOT.PBP  PARAM.SFO
tests/samples/gu/zbufferfog/: EBOOT.PBP  PARAM.SFO
tests/samplesTest/3dcubecontrol/: 3dplan.c  PARAM.SFO
tests/samplesTest/blitsample/: EBOOT.PBP  PARAM.SFO
tests/samplesTest/cube/: Makefile
tests/samplesTest/font/: PARAM.SFO
tests/samplesTest/gnuANDprintdebuggerTest/: EBOOT.PBP  Makefile
tests/samplesTest/grid/: EBOOT.PBP  Makefile  PARAM.SFO  main.c
tests/samplesTest/loadObjTest1/: main.c
tests/samplesTest/mymipmapping/: EBOOT.PBP  Makefile  PARAM.SFO  mipmapping.c
tests/samplesTest/pspPrinttest/: EBOOT.PBP  main.c
tests/shapesPreview/: conf.lua
